# priorityplot

./: .gitignore  README.md  build_pyinstaller.sh  bump_version.py  main.py  plot_widget.py  priority_plot.py  pyproject.toml  requirements.txt  run_priplot.sh  setup_dev.sh  test_bold_calendar.py  test_calendar_drag.py  test_enhanced_drag.py  test_refactored_widgets.py
.github/workflows/: build-executables.yml  build-linux.yml  build-macos.yml  build-windows.yml
docs/: index.html
packaging/: package_linux.sh  package_macos.sh  package_windows.ps1
packaging/linux/: control  priorityplot.desktop
packaging/windows/: priorityplot.nsi
priorityplot/: __init__.py  calendar_widgets.py  file_manager.py  goal_memory.py  input_widgets.py  interfaces.py  main.py  main_plot_widget.py  model.py  plot_widget.py  plot_widgets.py  task_manager.py  task_scheduler.py  ui_constants.py
pyinstaller/: priorityplot.spec
tests/: __init__.py  test_add_task_calendar.py  test_day_detection.py
